# minigrep

./: Cargo.toml  README.md  benchmark.txt  benchmark2.txt  output.txt  poem2.txt
src/: lib.rs  main.rs  utils.rs
